refactor(core): Clean up code, harden security, add unit tests, and refactor frontend page